--- a/src/app/lowvelocity/lowvelocity.component.html
+++ b/src/app/lowvelocity/lowvelocity.component.html
@@ -23,6 +23,9 @@
               <mat-icon>attach_file</mat-icon>
           </button>
       </div>
+
+      <div>Duration : {{workingMidiFile?.duration || "Pas encore de fichier"}}</div>
+
     </mat-card-content>
   </mat-card>
 </div>
